try fix ios safari flex overflow issue

--- a/src/assets/scss/layout/_tickets.scss
+++ b/src/assets/scss/layout/_tickets.scss
@@ -35,6 +35,9 @@
         .inner {
             flex-direction: column;
             text-align: center;
+            h2 {
+                width: 100%;
+            }
             .actions {
                 margin-right: 0;
                 margin-left: 0;
